--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "nodemon server.js"
   },
   "devDependencies": {
+    "@types/node": "^16.10.3",
     "color": "^4.0.1",
-    "keypress": "^0.2.1"
+    "keypress": "^0.2.1",
+    "typescript": "^4.4.3"
   }
 }
