--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.2.0"
   },
   "scripts": {
     "start": "nodemon server.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.10.3",
     "color": "^4.0.1",
     "keypress": "^0.2.1",
+    "ts-node": "^10.3.0",
     "typescript": "^4.4.3"
   }
 }
