--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
+    "axios": "^0.23.0",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.3.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
