--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "npm-watch": "^0.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
     "typescript": "^4.4.4",
