--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --verbose"
+    "test": "jest --verbose --coverage"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
