--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "babel-jest": "^27.3.1",
+    "http": "^0.0.1-security",
     "mongoose": "^6.0.12",
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2",
     "typescript": "^4.4.4"
   }
 }
