--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.12",
-    "socket.io": "^4.3.1"
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2"
   },
   "scripts": {
-    "start": "nodemon server.ts"
+    "start": "nodemon server.ts",
+    "test": "jest --verbose --coverage"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -17,6 +19,9 @@
     "color": "^4.0.1",
     "keypress": "^0.2.1",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7"
   }
 }
