--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "module": "commonjs",
         "target": "es2020",
         "jsx": "preserve",
-        "strictFunctionTypes": true
+        "strictFunctionTypes": true, 
+        "esModuleInterop": true
     },
     "exclude": [
         "node_modules",
