front-end testing setup added with two basic test

--- a/client/package.json
+++ b/client/package.json
@@ -10,24 +10,30 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
     "axios": "^0.23.0",
     "babel-jest": "^27.3.1",
+    "express": "^4.17.1",
+    "jest": "^27.3.1",
+    "npm-watch": "^0.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
-    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "jest test  --env=jsdom --verbose --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
