--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,9 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "src"
   },
   "include": [
     "src",
     "src/declaration.d.ts"
-  ]
+, "assetsTransformer.js"  ]
 }
